--- a/.github/workflows/main_helloapi-test.yml
+++ b/.github/workflows/main_helloapi-test.yml
@@ -27,8 +27,8 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          # npm run test --if-present
-
+          npm run test --if-present
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -38,12 +38,22 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
+      
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_92D1B9DFD8AD4593BC579329FD67BC07 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4F1D4AA514594DE28B4FC32FB1CAD556 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C600263701604C83AFC67BBE81CD7D8E }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
@@ -52,4 +62,4 @@ jobs:
           app-name: 'helloapi-test'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.__publishingprofilesecretname__ }}
+          
